Changed the word test to the word example, to avoid confusion with unit testing or other test things.

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
   </target>
 
   <target name="clobber" depends="clean" description="remove all artifact files">
-    <delete file="lightshell-test.jar"/>
+    <delete file="lightshell-example.jar"/>
     <delete file="lightshell.jar"/>
   </target>
 
@@ -18,15 +18,15 @@
 
   <target name="jar" depends="compile" description="create a Jar file for the library">
     <jar destfile="lightshell.jar" filesetmanifest="skip">
-      <fileset dir="bin" includes="**/*.class" excludes="test/*.class"/>
+      <fileset dir="bin" includes="**/*.class" excludes="example/*.class"/>
     </jar>
   </target>
 
-  <target name="test" depends="compile" description="create a runnable Jar file for testing purposes">
-    <jar destfile="lightshell-test.jar" filesetmanifest="skip">
+  <target name="example" depends="compile" description="create a runnable Jar file for testing purposes">
+    <jar destfile="lightshell-example.jar" filesetmanifest="skip">
       <fileset dir="bin" includes="**/*.class"/>
       <manifest>
-        <attribute name="Main-class" value="test/Main"/>
+        <attribute name="Main-class" value="example/Main"/>
       </manifest>
     </jar>
   </target>
